--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@ button.pokemon-button {
   max-width: 400px;
   width: 80%;
   text-align: center;
+  position: relative; /* Add this line */
 }
 
 .modal-close {
