--- a/css/styles.css
+++ b/css/styles.css
@@ -1,46 +1,38 @@
 /* Default styles */
 body {
-  background-image: url("https://images.unsplash.com/photo-1613771404721-1f92d799e49f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2069&q=80");
-  background-repeat: no-repeat;
-  background-size: cover;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  background: url('https://images.unsplash.com/photo-1613771404721-1f92d799e49f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2069&q=80') no-repeat center/cover;
 }
 
+/* Pokemon list */
 ul.pokemon-list {
   list-style-type: none;
-  padding: 0;
+  padding: 20px;
 }
 
 ul.pokemon-list li {
   margin-bottom: 10px;
 }
 
+/* Pokemon button */
 button.pokemon-button {
   background-color: #f44336;
   color: #fff;
-  padding: 10px 20px;
+  padding: 10px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  white-space: nowrap; /* Prevent text from wrapping */
-  overflow: hidden; /* Hide overflowing text */
-  text-overflow: ellipsis; /* Show ellipsis (...) for overflow */
-  min-width: 200px; /* Set a minimum width for the button */
-  transition: background-color 0.3s ease; /* Add transition for background color */
+  display: block;
+  margin: 0 auto;
+  width: 200px;
+  transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 button.pokemon-button:hover {
-  background-color: #d32f2f;
-}
-
-button.pokemon-button:active {
-  background-color: #b71c1c;
+  background-color: #ff5733;
+  transform: scale(1.1);
 }
 
 /* Modal styles */
@@ -49,10 +41,7 @@ button.pokemon-button:active {
   justify-content: center;
   align-items: center;
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  inset: 0;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 9999;
 }
@@ -64,7 +53,7 @@ button.pokemon-button:active {
   max-width: 400px;
   width: 80%;
   text-align: center;
-  position: relative; /* Add this line */
+  position: relative;
 }
 
 .modal-close {
@@ -76,10 +65,8 @@ button.pokemon-button:active {
   cursor: pointer;
 }
 
-h1 {
-  color: white; /* Set the text color to white */
+h2 {
   margin-top: 0;
-  text-align: center; /* Center the heading */
 }
 
 .modal-image {
@@ -88,21 +75,8 @@ h1 {
   margin-bottom: 10px;
 }
 
-/* Additional styles */
-p {
-  color: white; /* Set the text color to white */
-  text-align: center; /* Center the text */
-  margin: 20px 0; /* Add margin for spacing */
-}
-
-.back-to-top {
-  color: white;
-  margin-top: 20px;
-}
-
 /* Responsive styles */
 @media (max-width: 768px) {
-  /* Adjust styles for smaller screens */
   ul.pokemon-list li {
     margin-bottom: 5px;
   }
@@ -113,12 +87,23 @@ p {
 
   .modal-content {
     max-width: 300px;
+    width: 90%; /* Adjusted width for smaller screens */
   }
 }
 
 @media (max-width: 480px) {
-  /* Adjust styles for even smaller screens */
   button.pokemon-button {
     padding: 6px 12px;
   }
+}
+
+/* Heading styles */
+h1, h6 {
+  text-align: center;
+  color: #fff;
+}
+
+h1 {
+  padding-top: 30px;
+  margin: 0 auto; /* Added to center the heading horizontally */
 }
